minor overflow bug fix

--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@ body {
 }
 
 html {
-  width: 100vw;
-  height: 100vh;
   background-color: white;
   transition: all 0.2s;
 }
